# ChangeLog for dev-python/jedi
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jedi/ChangeLog,v 1.14 2015/02/27 16:30:23 jlec Exp $

*jedi-0.8.1-r1 (27 Feb 2015)

  27 Feb 2015; Justin Lecher <jlec@gentoo.org> +jedi-0.8.1-r1.ebuild,
  metadata.xml:
  Strip -final0 from version do fix version checking of pkg_resources

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> jedi-0.8.1.ebuild:
  Stable for x86, wrt bug #521074

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> jedi-0.8.1.ebuild:
  Stable for amd64, wrt bug #521074

  27 Nov 2014; Tim Harder <radhermit@gentoo.org> jedi-0.8.1.ebuild:
  Drop python3_2 support and add python3_4 support.

  25 Nov 2014; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Add myself as a maintainer.

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

*jedi-0.8.1 (24 Jul 2014)

  24 Jul 2014; Julian Ospald <hasufell@gentoo.org> +jedi-0.8.1.ebuild:
  version bump

*jedi-0.8.0 (10 May 2014)

  10 May 2014; Julian Ospald <hasufell@gentoo.org> +jedi-0.8.0.ebuild:
  version bump

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.7.0.ebuild:
  Stable for x86, wrt bug #491542

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.7.0.ebuild:
  Stable for amd64, wrt bug #491542

*jedi-0.7.0 (18 Aug 2013)

  18 Aug 2013; Julian Ospald <hasufell@gentoo.org> +jedi-0.7.0.ebuild:
  version bump, fixes #474628

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.6.0.ebuild:
  Stable for amd64, wrt bug #474186

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.6.0.ebuild:
  Stable for x86, wrt bug #474186

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.5_beta5.ebuild:
  Stable for x86, wrt bug #469736

*jedi-0.6.0 (15 May 2013)

  15 May 2013; Julian Ospald <hasufell@gentoo.org> +jedi-0.6.0.ebuild:
  version bump

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> jedi-0.5_beta5.ebuild: