@@ -7,30 +7,31 @@ DIST jedi-0.7.0-html-docs.tar.xz 176900 SHA256 be40d40afd1b7d7b6c9b1c19c58024fdd
 DIST jedi-0.7.0.tar.gz 136647 SHA256 01f0d070ff3852bb6325f436c87070714ccf3d6edb057d9b562a1b19a601daa9 SHA512 104c4016e68f4f4deddb29ed4bc8278e912681c6cc312f1bb5b04ad5066c00175f804d7f7eb631dde4e735fdb98b2397d275e4252594d89c3cbbf90e8a904c59 WHIRLPOOL 4bc2ed0075b41b2520b074c43246e40c58ec1820483eb31787508435c39231343aee3310c201d0812b1639282645b6f8cf5b6f5ad4d82a2251668afffa5a3cd1
 DIST jedi-0.8.0-final0.tar.gz 310242 SHA256 8eaddb1e5f055b49d4124597ed2763f7ddf48f24aad811b566c5c3b000e4d04a SHA512 2d10bc83da39d0f28b289d320ec953b2ec306e8c3befa5c95555a58bade943a78dfd9440f7c053b072fbed8ad26f2b61ad291acca570a13550c6952ac83e009e WHIRLPOOL e435192e8bf9b7785c292a3efcdd8e2aab484c5aed4b2614676857350eb0ec0c8e1a24f00d70807a0d4e0bba835e5dcfa8ca3c3382f6bbb15559d3585906426c
 DIST jedi-0.8.1-final0.tar.gz 298089 SHA256 5ccd72817cc8c47102ba28f332fee6242ea0d822a46651a22214445144845200 SHA512 158b8a62c95ae04cfb593a03d9da382fade94f058e308bba1ca56f7e0dfd58b1487e98313cb9f8195a62164a39cf90490930c6cb1f1fbbc893c0c2fbb34f8615 WHIRLPOOL 9495589e4bffc56735a5f1beda07cec53876072c34d5501f54ffdcee6d50d6d2476dd331a1792df672b12f76a0b82096e32df155b8db27bf39b69e52b7db8896
+DIST jedi-0.8.1.tar.gz 304088 SHA256 4d23ae457cec14cedb71fb56f0ed51d75798f2fd74e91f6e5134b09a4a78eba8 SHA512 2188bf0eede9d78a298c0cd6071060e74b0531ebd3c21d4e831c77202b7e338452f0ab10b693902e5b0da8095f394e5c67e055f1cde3a476fc2566b627bb6d9f WHIRLPOOL ecc131bd7a9ee046200ebe089cb37b7afe6b9bfd9522329b96418f34383fbf7f60957cba8deb9799bff804783c7b5a909159717f382da9d979d13c57c8f92066
 EBUILD jedi-0.5_beta5.ebuild 615 SHA256 f4677b98bea88118350e2d6a1a2a1687427ccdbe522e68e80e632d737960fda7 SHA512 25ddd07c2df93a2ce48a979930cc7e3020ad8c41b16b0a99971dc83b3883d42fafb4aa4635529be52402531b05ac89d93f9374b669a0ca10c3ac68a9e5a827ce WHIRLPOOL a661b167e5f320e6ae437822f0b0bc20d546bc7bc08065d58e778afc01eab7e368b1009f2950a3faa8a777e6590424291e96a6f362244735991b46a647f1dd08
 EBUILD jedi-0.6.0.ebuild 615 SHA256 cab2851fd612360068ccef60c71b50afc34075e69243f265efbf6cb945f9e02f SHA512 42ba2348fadb80539737085373e7d415e08852acfdc260432cf17788abaf4f774db5d0406ffdef154363537d56e5c09cfab8aadf2a4c3f168441401314066b37 WHIRLPOOL dda5199a4a1ac3e8c15a1ca3f9bbfed36b88e2bb6d1363291a1dea25db51a1b7115bd5d9e94ea3dedfb7c1a8b111c47e089feaf2246f0ba0ab67411ae889fb89
 EBUILD jedi-0.7.0.ebuild 966 SHA256 dec0f44acc30a36563025c8630725c0a0e79457960edea6a27e16ec2694658fa SHA512 547b1536560964363b35d55fbc039fd935366d4b23084e86150ca285126048cd768eecb732581d9cf4555cacc05e60eeb42c3bb5e6385a45b331dd7b4c014258 WHIRLPOOL 8d1a1878b04a876ba778354d6170d1925521e0243aedb76dd8a9eb71c91c86f3870bf278f10c79d4da15bed39021bb72ea2a97cdb71e8345002f7146ffdb34ee
 EBUILD jedi-0.8.0.ebuild 1076 SHA256 3235a6f5e2f5ccb9ad125007199fbeeab4a9e732b8003e4e15995998f537c52c SHA512 61d3ea9e56cb082c2aabcb1327fb4aa0dce5834169469ffae1597446f399950229c5676fd0401e645d7cd5a035ae301592355e76e6909f4f6a6ecfba8f73355e WHIRLPOOL 7f6b43697fd34e28fce2ea277dd162652023c0c4bb31f85c42c0ad11610c3e29650d5ab8b7718eafbefd572fc1c68c9e5ce12136233e873dd8a94c712a1cf895
-EBUILD jedi-0.8.1-r1.ebuild 1213 SHA256 9402088f86eaf7db087bf8ad3543ade2394d1b845d351346867d2c783709171d SHA512 22ff87b27c23b265d52a821f3f8a604f3372cd99e620c4f6b1f8bf5901f048ba4ecaffd70624f7d910810916af5c866f872b9cd78834a4b6d43567ba62512dac WHIRLPOOL 7c64c957e1d2b304a951adf3fe416f34a0857e966f4ad3fe666e57a7477f7c9324bf4b2b0144350333acef1e59bcd3c0a487cd242a6a64fa44d46b062083b70a
+EBUILD jedi-0.8.1-r2.ebuild 1013 SHA256 0f4178c50b4186593d0afbb7bb3e147d22b9f7debe2e5ff59311598ac556ad1e SHA512 9ffd37ff8c8702988b8fd27b08e31a45d587e434d10be866d07106e4d63783342fcd045de44d5ce416f9caf9eece8b0d364daba20bf9c4f3205ec9e1d716ccf1 WHIRLPOOL f1d4f7cd627786f8391fbb4cce6e8d02b6494a1df74bf16ea1bea7e40af9214c684a0dce81d968bb4236677012be025bb9e07d9f4bc5bc93832061c88b1fea73
 EBUILD jedi-0.8.1.ebuild 1059 SHA256 5e6ba638ae4af3255d31a5c25adbd24e952d1b093241dfac19ebdec4a269e3b5 SHA512 3e95dc580b04520a31d63641f233202b98bef4c60b2b2ff31739d0234f295772456afe7d3b6142402bfb4e20ecede66c30054a98cd73ec6f816018433b8a89ac WHIRLPOOL 053b6c1168ff220e05b2fc5ddbe0b6119bfb928ddeedefe1657d1b3862958d04307c0c9bd5dd78e94aeb983dbddc0969e1633e973e065e49eef25ac4a9144132
-MISC ChangeLog 2143 SHA256 520b0e9dd171d03c238d44075d10c287b93fc8c976a7ebd7d63f0b4e64fcf376 SHA512 83a50178360219831c260ab50cbf879c74489efae0c9aec8d9e8470a81d80db93da39f98c3e92c38987144a87e3a300b3dc6ed0cb4a467a40879d060adaea16b WHIRLPOOL e518bbfc3cbb0fa3dfc0a4e0ce4b5622cf4401c05bcf8f9ca134af5af81bab8bc8902d8187f3004d84d2d0377ae4ecab0f3f40580c453d39afd4a5323981343f
+MISC ChangeLog 2329 SHA256 026822fd95097c38d67c35e614feab18d3ddf172faa17d4a444093db7da6eca9 SHA512 48114e46d8824735ea64408ba1ebbe3ec024fd69fc4ad54bb5b4b7ec41d037495137701a0c37af419b502a4794a50defabbb569cb92b2dd12cbefdf9190b3683 WHIRLPOOL e43f9cfc883043ea2a2bbaeb36aa678b1fd2b48cd76d5be13ea17ecf62c8bfa5cc835836ff21c11d39469e3e74de5cb86a2fe0e73f9c83f77880a690efa6c24e
 MISC metadata.xml 238 SHA256 c82e7b300e53440b3083f208b7c5266d4dfb30d5e844bf5f3cc3537a76891d14 SHA512 203eb4c8b137828f1e896021e9dbd86285d24f58d9101cb298ef396fdc2e00ed2be424dd051a105fe27f88142444129af5c2ccc7e1fd36ddae1886d9fc1cbd8e WHIRLPOOL fdf11d1f196cc11f04e537ea1e4a61335f6e3c0daa02cd5e006f4a567f9643d2ff28f9111c3a70d35e392e522aa45a9af1961b388abb6ec5718bc88443e02ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU8JugXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJU8Ze3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirmf4P/RZRXt4etRRXi9pBsb/ACS1v
-80zcYUib8/1UGJh3LjZbHQEzkYdfDKglru9uVzvpbTkjeE0ZXnP8mry+rQZUjwo8
-zts/u8tmYzpTuJ0VRA225X4PuRooFZ5ktcbFa2nV0n7Tt7UBFKfdwSRHLc5eF2nM
-9H+IPkP0Z6m4MGwuguLKMWtK4YeyMlzchdnVsdFkIYy8z9Isiot1I661H18Ln/SS
-kibKgXwGSi5de0lSWKFvVQiqAyfBEzUS47RR3JGsjgyYuI38Sd2KM4nbsPk6hbrl
-1q3g200UiE5JSodA+47LCbAWVEARQLKpzHSLZjcd/KzfL2zWCRqIYGbpNH0YAsQo
-Ez0ES4gG4IKX4e3Vyds/ogU9rtcMYad/lXknD8U0EkNVxV7yYmSG2n1TSIddBw0l
-1Q44sBcYs/5yWP5SbvutZbfxZG6JqUxVhnq+UOJMa3+lT6XSVNs0a+mJgWDbgeMF
-9XfJdRHCymFnNr2F1JTZGO1tdRsRCVc3x7H9ZlN0PVJB+z9aDdQnPWRqVWgCenfX
-XiFjPXPFjmHnviMbBp+G5l4tGKTUuHNHlYlWV5f1XppQFWwjQ0YV+C+di4T340HA
-O4nzonedhnUFreHnPYVTRIAzq11nYojQrsi9kcijIMDPc9NHRJ9HWb1J9VkARwan
-BqLyEVdWHHkYsDHHqABJ
-=BMFW
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirqJ8P/1j+abvvfRJeL0IU0Iu+YIBo
+7/zjgXH8mfz8PV8cU4PXDefdwIVWSUQu1mCaS5uWXQ/skZAIZiQMi8bdyDGJ9jcK
+NfJXOo6UlsqJkZUkBbgHSzMMbPxI0YzAeltfLemXiJyXq6wxWM3o6TrWWHXOnDbe
+26Md4dRzJyvxt9a/ofHIYZkhIpF6Tc1CfXmfs49cNfimXBFJCcrzLp9Axrh1xKVu
++e1bM7o8ZuuHwk0No+FeQiUMKyw5qIxq6NTFa26P6s4Pa7zjzwuhi5trBkZvNgc2
+tWOepLplzxcXERCJ+09IX8PlUNDioFpVQ2GaBRYbdbsNmPSopMc9jy8VOi4npjUI
+Gwd0j0qE0mVNItKEeJ7oOnZjsnyEpvTK/0+Y7eraHEV+Mj1ukevKiTTdh6qmrQKb
+Ow93WuF7a6VdXwylkjvKkw5VkH0LsaHwkguV/1kqNPrXDa2P171FhaGxagA98ftw
+FMY92/QFjXeTRh63FY5kr+naGdNl2rSX0dHHzswOmmKnnjTQV4NhXMrCVsNVAXk5
+Fue1rYsM3aQpwTcHa+tBFldCPPLFLTh3BB1SLclXk33pn5rHiCZfBoIqmU35cqa8
+h1o+sj5tdNzUblvF1YmESitAo6ynB/hsAgLhl5khR800kYqTrKVqP1hbJl8s2IWg
+084gOr/VjSbSPsXelXAr
+=iq3a
 -----END PGP SIGNATURE-----
