@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/jedi
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jedi/ChangeLog,v 1.14 2015/02/27 16:30:23 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jedi/ChangeLog,v 1.15 2015/02/28 10:25:54 jlec Exp $
+
+*jedi-0.8.1-r2 (28 Feb 2015)
+
+  28 Feb 2015; Justin Lecher <jlec@gentoo.org> +jedi-0.8.1-r2.ebuild,
+  -jedi-0.8.1-r1.ebuild:
+  Use proper upstream tarball, thanks marienz for reporting
 
 *jedi-0.8.1-r1 (27 Feb 2015)
 
